/*
 * Copyright 2013 Alexander Lochmann, Michael Lenz, Jochen Streicher
 *
 * This file is part of SystemTap4Android.
 *
 * SystemTap4Android is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * SystemTap4Android is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with SystemTap4Android.  If not, see <http://www.gnu.org/licenses/>.
 */

syntax = "proto2";
package SystemTapMessage;

option java_package = "com.systemtap.android.net";

enum MessageType {
	ACK				=	1;
	SEND_MODULE		=	2;
	LIST_MODULES	=	3;
	MODULE_LIST		=	4;
	CONTROL_MODULE	=	5;
}

message SendModule {
	required string			name	=	1;
	required bytes			data	=	2;
}

message ModuleInfo {
	required string			name	=	1;
	required ModuleStatus	status	=	2;
}

message ModuleList {
	repeated ModuleInfo		modules	=	1;
}	

message Ack {
	required int32	ackedType	=	1;
}

enum ModuleStatus {
	RUNNING		=	0;
	STOPPED		=	1;
	CRASHED		=	2;
	DELETED		=	3;
}
